--- a/styles.css
+++ b/styles.css
@@ -464,7 +464,7 @@ h3{
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
-    background-image: url(front.png);
+    background-image: url(front_improved.png);
     background-position: center;
     background-size: cover;
   }
