--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
   
   body{
     overflow-y: scroll;
-    background-image: url(/zvv777.github.io-main/public/background.jpg);
+    background-image: url(background.jpg);
     background-size: cover;
   }
   header{
@@ -398,7 +398,7 @@ h3{
   }
 
   .mainC{
-    background-image: url(/zvv777.github.io-main/public/MushroomCreature.png);
+    background-image: url(MushroomCreature.png);
     background-position: -600px;
     display: flex;
     flex-direction: column;
@@ -458,7 +458,7 @@ h3{
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
-    background-image: url(/zvv777.github.io-main//public/front_improved.png);
+    background-image: url(front_improved.png);
     background-position: center;
     background-size: cover;
   }
@@ -468,7 +468,7 @@ h3{
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
-    background-image: url(/zvv777.github.io-main//public/2.png);
+    background-image: url(2.png);
     transform: rotateY(180deg);
     background-position: center;
     background-size: cover;
